<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory
        android:key="preference_category_solver"
        android:title="@string/preference_category_solver">

        <ListPreference
            android:key="preference_solver_field_units"
            android:title="@string/preference_solver_field_units"
            android:summary="%s"
            android:entries="@array/preference_solver_field_units_entries"
            android:entryValues="@array/preference_solver_field_units_values"
            android:defaultValue="arcminwidth" />

        <EditTextPreference
            android:key="preference_solver_field_min"
            android:title="@string/preference_solver_field_min"
            android:summary="@string/preference_solver_field_min_summary"
            android:defaultValue="30"
            android:inputType="numberDecimal" />

        <EditTextPreference
            android:key="preference_solver_field_max"
            android:title="@string/preference_solver_field_max"
            android:summary="@string/preference_solver_field_max_summary"
            android:defaultValue="180"
            android:inputType="numberDecimal" />

        <EditTextPreference
            android:key="preference_solver_cpu_limit"
            android:title="@string/preference_solver_cpu_limit"
            android:summary="@string/preference_solver_cpu_limit_summary"
            android:defaultValue="60"
            android:inputType="number" />

        <EditTextPreference
            android:key="preference_solver_wall_timeout"
            android:title="@string/preference_solver_wall_timeout"
            android:summary="@string/preference_solver_wall_timeout_summary"
            android:defaultValue="120"
            android:inputType="number" />

        <EditTextPreference
            android:key="preference_solver_max_objects"
            android:title="@string/preference_solver_max_objects"
            android:summary="@string/preference_solver_max_objects_summary"
            android:defaultValue="100"
            android:inputType="number" />

        <ListPreference
            android:key="preference_solver_downsample"
            android:title="@string/preference_solver_downsample"
            android:summary="%s"
            android:entries="@array/preference_solver_downsample_entries"
            android:entryValues="@array/preference_solver_downsample_values"
            android:defaultValue="2" />

        <ListPreference
            android:key="preference_solver_parity"
            android:title="@string/preference_solver_parity"
            android:summary="%s"
            android:entries="@array/preference_solver_parity_entries"
            android:entryValues="@array/preference_solver_parity_values"
            android:defaultValue="both" />

        <SwitchPreference
            android:key="preference_solver_hint_enabled"
            android:title="@string/preference_solver_hint_enabled"
            android:summary="@string/preference_solver_hint_enabled_summary"
            android:defaultValue="false" />

        <EditTextPreference
            android:key="preference_solver_hint_radius"
            android:title="@string/preference_solver_hint_radius"
            android:summary="@string/preference_solver_hint_radius_summary"
            android:defaultValue="15"
            android:inputType="numberDecimal"
            android:dependency="preference_solver_hint_enabled" />

        <SwitchPreference
            android:key="preference_calibration_location_enabled"
            android:title="@string/preference_calibration_location_enabled"
            android:summary="@string/preference_calibration_location_enabled_summary"
            android:defaultValue="true" />

    </PreferenceCategory>

</PreferenceScreen>
