<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    
    <!--<PreferenceCategory
        android:key="preference_category_camera_effects"
        android:title="@string/preference_category_camera_effects"
        >
        -->

        <!--  if we move this to another PreferenceGroup, we should update code for the readFromIntent() call -->
        <!--
        <ListPreference 
            android:key="preference_color_effect"
            android:title="@string/preference_color_effect"
            android:summary="@string/preference_color_effect_summary"
            />
        -->
    
        <!--  if we move this to another PreferenceGroup, we should update code for the readFromIntent() call -->
        <!--
        <ListPreference 
            android:key="preference_scene_mode"
            android:title="@string/preference_scene_mode"
            android:summary="@string/preference_scene_mode_summary"
            />
        -->
    
        <!--  if we move this to another PreferenceGroup, we should update code for the readFromIntent() call -->
        <!--
        <ListPreference 
            android:key="preference_white_balance"
            android:title="@string/preference_white_balance"
            android:summary="@string/preference_white_balance_summary"
            />
        -->

        <!--  if we move this to another PreferenceGroup, we should update code for the readFromIntent() call -->
        <!--
        <ListPreference 
            android:key="preference_iso"
            android:title="@string/preference_iso"
            android:summary="@string/preference_iso_summary"
            />
        -->

        <!--  if we move this to another PreferenceGroup, we should update code for the readFromIntent() call -->
        <!--
        <ListPreference
            android:key="preference_exposure"
            android:title="@string/preference_exposure"
            android:summary="@string/preference_exposure_summary"
            />
        -->

        <!--  if we move this to another PreferenceGroup, we should update code for the findPreference() call -->
        <!--
        <SwitchPreference
            android:key="preference_auto_stabilise"
            android:title="@string/preference_auto_stabilise"
            android:summary="@string/preference_auto_stabilise_summary"
            android:defaultValue="false"
            />
        -->

    <!-- </PreferenceCategory> -->

    <PreferenceCategory
        android:key="preference_category_stargazer"
        android:title="@string/preference_category_stargazer">

        <EditTextPreference
            android:key="preference_matrix_width"
            android:title="@string/preference_matrix_width"
            android:summary="@string/preference_matrix_width_summary"
            android:defaultValue="0"
            android:inputType="numberDecimal" />

        <EditTextPreference
            android:key="preference_matrix_height"
            android:title="@string/preference_matrix_height"
            android:summary="@string/preference_matrix_height_summary"
            android:defaultValue="0"
            android:inputType="numberDecimal" />

        <EditTextPreference
            android:key="preference_focal_length"
            android:title="@string/preference_focal_length"
            android:summary="@string/preference_focal_length_summary"
            android:defaultValue="0"
            android:inputType="numberDecimal" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="preference_category_solver"
        android:title="@string/preference_category_solver">

        <ListPreference
            android:key="preference_solver_field_units"
            android:title="@string/preference_solver_field_units"
            android:summary="%s"
            android:entries="@array/preference_solver_field_units_entries"
            android:entryValues="@array/preference_solver_field_units_values"
            android:defaultValue="arcminwidth" />

        <EditTextPreference
            android:key="preference_solver_field_min"
            android:title="@string/preference_solver_field_min"
            android:summary="@string/preference_solver_field_min_summary"
            android:defaultValue="30"
            android:inputType="numberDecimal" />

        <EditTextPreference
            android:key="preference_solver_field_max"
            android:title="@string/preference_solver_field_max"
            android:summary="@string/preference_solver_field_max_summary"
            android:defaultValue="180"
            android:inputType="numberDecimal" />

        <EditTextPreference
            android:key="preference_solver_cpu_limit"
            android:title="@string/preference_solver_cpu_limit"
            android:summary="@string/preference_solver_cpu_limit_summary"
            android:defaultValue="60"
            android:inputType="number" />

        <EditTextPreference
            android:key="preference_solver_wall_timeout"
            android:title="@string/preference_solver_wall_timeout"
            android:summary="@string/preference_solver_wall_timeout_summary"
            android:defaultValue="120"
            android:inputType="number" />

        <EditTextPreference
            android:key="preference_solver_max_objects"
            android:title="@string/preference_solver_max_objects"
            android:summary="@string/preference_solver_max_objects_summary"
            android:defaultValue="100"
            android:inputType="number" />

        <ListPreference
            android:key="preference_solver_downsample"
            android:title="@string/preference_solver_downsample"
            android:summary="%s"
            android:entries="@array/preference_solver_downsample_entries"
            android:entryValues="@array/preference_solver_downsample_values"
            android:defaultValue="2" />

        <ListPreference
            android:key="preference_solver_parity"
            android:title="@string/preference_solver_parity"
            android:summary="%s"
            android:entries="@array/preference_solver_parity_entries"
            android:entryValues="@array/preference_solver_parity_values"
            android:defaultValue="both" />

        <SwitchPreference
            android:key="preference_solver_hint_enabled"
            android:title="@string/preference_solver_hint_enabled"
            android:summary="@string/preference_solver_hint_enabled_summary"
            android:defaultValue="false" />

        <EditTextPreference
            android:key="preference_solver_hint_radius"
            android:title="@string/preference_solver_hint_radius"
            android:summary="@string/preference_solver_hint_radius_summary"
            android:defaultValue="15"
            android:inputType="numberDecimal"
            android:dependency="preference_solver_hint_enabled" />

        <SwitchPreference
            android:key="preference_calibration_location_enabled"
            android:title="@string/preference_calibration_location_enabled"
            android:summary="@string/preference_calibration_location_enabled_summary"
            android:defaultValue="true" />

    </PreferenceCategory>
    <PreferenceCategory
        android:key="preference_category_camera_controls"
        android:title="@string/preference_category_camera_controls">

        <!--  if we move this to another PreferenceGroup, we should update code for the findPreference() call -->
        <SwitchPreference
            android:key="preference_face_detection"
            android:title="@string/preference_face_detection"
            android:summary="@string/preference_face_detection_summary"
            android:defaultValue="false"
            />

        <ListPreference
            android:key="preference_timer"
            android:title="@string/preference_timer"
            android:summary="%s"
            android:icon="@drawable/ic_timer_white_48dp"
            android:entries="@array/preference_timer_entries"
            android:entryValues="@array/preference_timer_values"
            android:defaultValue="0"
            />

        <ListPreference 
            android:key="preference_burst_mode"
            android:title="@string/preference_burst_mode"
            android:summary="%s"
            android:entries="@array/preference_burst_mode_entries"
            android:entryValues="@array/preference_burst_mode_values"
            android:defaultValue="1"
            />

        <ListPreference
            android:key="preference_burst_interval"
            android:title="@string/preference_burst_interval"
            android:summary="%s"
            android:entries="@array/preference_burst_interval_entries"
            android:entryValues="@array/preference_burst_interval_values"
            android:defaultValue="0"
            />

        <PreferenceScreen
            android:key="preference_screen_camera_controls_more"
            android:title="@string/preference_screen_camera_controls_more"
            android:icon="@drawable/ic_more_horiz_white_48dp"
            android:persistent="false"
            android:fragment="net.sourceforge.opencamera.PreferenceSubCameraControlsMore"
            />

        <PreferenceScreen
            android:key="preference_preview"
            android:title="@string/preference_preview"
            android:icon="@drawable/ic_more_horiz_white_48dp"
            android:persistent="false"
            android:fragment="net.sourceforge.opencamera.PreferenceSubPreview"
            />

        <PreferenceScreen
            android:key="preference_screen_gui"
            android:title="@string/preference_screen_gui"
            android:icon="@drawable/ic_more_horiz_white_48dp"
            android:persistent="false"
            android:fragment="net.sourceforge.opencamera.PreferenceSubGUI"
            />

    </PreferenceCategory>
    <PreferenceCategory
        android:key="preference_category_camera_quality"
        android:title="@string/preference_category_camera_quality">

        <PreferenceScreen
            android:key="preference_screen_photo_settings"
            android:title="@string/preference_screen_photo_settings"
            android:icon="@drawable/take_photo_pref"
            android:persistent="false"
            android:fragment="net.sourceforge.opencamera.PreferenceSubPhoto"
            />

        <PreferenceScreen
            android:key="preference_screen_video_settings"
            android:title="@string/preference_screen_video_settings"
            android:icon="@drawable/take_video_pref"
            android:persistent="false"
            android:fragment="net.sourceforge.opencamera.PreferenceSubVideo"
            />

        <PreferenceScreen
            android:key="preference_screen_location_settings"
            android:title="@string/preference_screen_location_settings"
            android:icon="@drawable/ic_gps_fixed_white_48dp"
            android:persistent="false"
            android:fragment="net.sourceforge.opencamera.PreferenceSubLocation"
            />

        <PreferenceScreen
            android:key="preference_screen_processing_settings"
            android:title="@string/preference_screen_processing_settings"
            android:icon="@drawable/ic_more_horiz_white_48dp"
            android:persistent="false"
            android:fragment="net.sourceforge.opencamera.PreferenceSubProcessing"
            />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="preference_category_online"
        android:title="@string/preference_category_online"
        >

        <Preference
            android:key="preference_online_help"  
            android:title="@string/preference_online_help"
            android:summary="@string/preference_online_help_summary"
            android:icon="@drawable/ic_help_outline_white_48dp"
            />  

        <!--  if we move this to another PreferenceGroup, we should update code for the findPreference() call -->
        <ListPreference
            android:key="preference_camera_api"
            android:title="@string/preference_camera_api"
            android:summary="@string/preference_camera_api_summary"
            />

        <Preference
            android:key="preference_about"  
            android:title="@string/preference_about"
            android:summary="@string/preference_about_summary"
            android:icon="@drawable/ic_info_outline_white_48dp"
            />

        <Preference
            android:key="preference_privacy_policy"
            android:title="@string/preference_privacy_policy"
            android:summary="@string/preference_privacy_policy_summary"
            android:icon="@drawable/ic_info_outline_white_48dp"
            />

        <PreferenceScreen
            android:key="preference_screen_licences"
            android:title="@string/preference_screen_licences"
            android:icon="@drawable/ic_info_outline_white_48dp"
            android:persistent="false"
            android:fragment="net.sourceforge.opencamera.PreferenceSubLicences"
            />

        <PreferenceScreen
            android:key="preference_screen_settings_manager"
            android:title="@string/preference_screen_settings_manager"
            android:icon="@drawable/settings"
            android:persistent="false"
            android:fragment="net.sourceforge.opencamera.PreferenceSubSettingsManager"
            />

        </PreferenceCategory>
        
</PreferenceScreen>
